bug 13731
Add scrollbars and reduce width of tree view, to prevent large
subdomain lists from being unselectable

status 13731: resolved fixed

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -6102,7 +6102,8 @@ label.error {
 
 /*Tree view*/
 .tree-view {
-  height: 100%;
+  width: 24%;
+  height: 98%;
   overflow: auto;
 }
 
